--- a/examples/population_japan.ipynb
+++ b/examples/population_japan.ipynb
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
        "(-6000000.0, 6000000.0)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1413,18 +1413,32 @@
     "sortinds = np.argsort([int(agerange.split('-')[0].split('>')[-1]) for agerange in ageranges])[::-1]\n",
     "ageranges = np.array([r'$'+agerange + '$' for agerange in ageranges])\n",
     "fig, ax = init_plotting(style='nyt', figsize=(10,5))\n",
-    "sns.barplot(x=subdf.loc['women'].values, y=ageranges, order=ageranges[sortinds], color='pink',ax=ax)\n",
-    "sns.barplot(x=-subdf.loc['men'].values, y=ageranges, order=ageranges[sortinds],color='lightblue',ax=ax)\n",
+    "sns.barplot(x=subdf.loc['women'].values, y=ageranges, order=ageranges[sortinds], color='pink',ax=ax,lw=0)\n",
+    "sns.barplot(x=-subdf.loc['men'].values, y=ageranges, order=ageranges[sortinds],color='lightblue',ax=ax,lw=0)\n",
     "ax.set_xlim([-6*10**6, 6*10**6])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2368294., 2671006., 2813693., 2930647., 3279022., 3322243.,\n",
+       "       3477071., 3873471., 4328567., 5036488., 4445711., 4012379.,\n",
+       "       3671788., 3939694., 4415966., 3073178.,  491646., 2222338.,\n",
+       "          9588., 1318085.,   97017.])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "plt.close('all')"
+    "subdf.loc['men'].values"
    ]
   },
   {
