--- a/notebooks/maps.ipynb
+++ b/notebooks/maps.ipynb
@@ -23,8 +23,8 @@
     "from japandata.maps import load_map\n",
     "\n",
     "year = 2015  # Chooses the most recent map made up to year\n",
-    "quality = \"coarse\"  # Possible qualities: 'stylized', 'coarse', 'low', 'medium', 'high'\n",
-    "scale = \"jp_city_dc \"  # [\"jp\", \"jp_pref\", \"jp_city_dc\", \"jp_city\"]\n",
+    "quality = \"coarse\"  # Possible quality levels: 'stylized', 'coarse', 'low', 'medium', 'high'\n",
+    "scale = \"jp_city_dc \"  # Possible scales: \"jp\", \"jp_pref\", \"jp_city_dc\", \"jp_city\"\n",
     "city_dc_map = load_map(date=year, scale=\"jp_city_dc\", quality=quality)"
    ]
   },
@@ -33,54 +33,6 @@
    "metadata": {},
    "source": [
     "load_map returns a geopandas dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "geopandas.geodataframe.GeoDataFrame"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(city_dc_map)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id              object\n",
-       "prefecture      object\n",
-       "bureau          object\n",
-       "county          object\n",
-       "city            object\n",
-       "code            object\n",
-       "special         object\n",
-       "geometry      geometry\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city_dc_map.dtypes"
    ]
   },
   {
