--- a/notebooks/indices.ipynb
+++ b/notebooks/indices.ipynb
@@ -11,6 +11,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "e692f76b-bc22-45f5-a9a7-a196dbba1090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from japandata.indices import pref, prefmean, city, designatedcity, capital"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "ff44c95c-d32a-4354-8ed2-f2f0118731e9",
    "metadata": {},
    "outputs": [],
@@ -60,6 +70,16 @@
    "outputs": [],
    "source": [
     "mean_indices.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a5b6ef2-3ee1-4a18-9588-561b3684b73f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## NOTE THAT SOME OF THE COLUMNS MEASURE DIFFERENT THINGS FOR TOKYO 23 THAN FOR OTHER LOCALITIES.\n"
    ]
   }
  ],
