--- a/notebooks/maps.ipynb
+++ b/notebooks/maps.ipynb
@@ -23,8 +23,8 @@
     "from japandata.maps import load_map\n",
     "\n",
     "year = 2015  # Chooses the most recent map made up to year\n",
-    "quality = \"coarse\"  # Possible quality levels: 'stylized', 'coarse', 'low', 'medium', 'high'\n",
-    "scale = \"jp_city_dc \"  # Possible scales: \"jp\", \"jp_pref\", \"jp_city_dc\", \"jp_city\"\n",
+    "quality = \"coarse\"  # 'stylized', 'coarse', 'low', 'medium', 'high'\n",
+    "scale = \"jp_city_dc \"  # \"jp\", \"jp_pref\", \"jp_city_dc\", \"jp_city\"\n",
     "city_dc_map = load_map(date=year, scale=\"jp_city_dc\", quality=quality)"
    ]
   },
@@ -179,7 +179,9 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from japandata.maps import load_map\n",
     "\n",
     "filetypes = [\"png\"]\n",
@@ -286,7 +288,9 @@
     "miyagi_city.plot(ax=ax, edgecolor=\"r\", lw=1)\n",
     "miyagi_city_dc.plot(ax=ax, edgecolor=\"w\", facecolor=\"none\", lw=1)\n",
     "ax.set_axis_off()\n",
-    "ax.set_title('jp_city (red) has designated cities like sendai split into subentities while jp_city_dc does not')\n",
+    "ax.set_title(\n",
+    "    \"jp_city (red) has designated cities like sendai split into subentities while jp_city_dc does not\"\n",
+    ")\n",
     "for filetype in filetypes:\n",
     "    fig.savefig(PLOT_FOLDER + \"city_dc.\" + filetype, transparent=True)"
    ]
@@ -621,7 +625,9 @@
     "import folium\n",
     "from branca.colormap import linear\n",
     "from folium.features import GeoJsonTooltip\n",
+    "\n",
     "from japandata.maps import load_map\n",
+    "\n",
     "pref_map = load_map(date=2022, scale=\"jp_pref\", quality=\"coarse\")\n",
     "\n",
     "unhighlighted_style = {\n",
@@ -679,137 +685,8 @@
    },
    "outputs": [],
    "source": [
-    "from japandata.maps import AVAILABLE_MAPS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'1920-01-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '1950-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '1955-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '1960-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '1965-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '1970-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '1975-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '1980-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '1985-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '1995-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2000-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2005-01-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2006-01-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2007-04-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2007-10-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2009-03-20': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2010-03-29': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2011-03-31': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2012-04-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2013-04-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2014-04-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2015-01-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2016-01-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2017-01-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2018-01-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2019-01-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2020-01-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']},\n",
-       " '2021-01-01': {'jp': ['c'],\n",
-       "  'jp_pref': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city_dc': ['c', 'l', 'i', 'h'],\n",
-       "  'jp_city': ['c', 'l', 'i', 'h']}}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "from japandata.maps import AVAILABLE_MAPS\n",
+    "\n",
     "AVAILABLE_MAPS"
    ]
   },
@@ -860,8 +737,8 @@
     }
    ],
    "source": [
-    "city_dc_map = load_map(2020,'jp_city_dc','coarse')\n",
-    "area = city_dc_map.to_crs(6677).area.sum()/10**6 # square kilometers\n",
+    "city_dc_map = load_map(2020, \"jp_city_dc\", \"coarse\")\n",
+    "area = city_dc_map.to_crs(6677).area.sum() / 10**6  # square kilometers\n",
     "print(f\"Japan has an area of {int(area)} km^2\")"
    ]
   },
@@ -893,10 +770,11 @@
    "outputs": [],
    "source": [
     "from japandata.maps import load_map\n",
+    "\n",
     "# Start with a map at the city_dc level\n",
-    "city_dc_map = load_map(date=2022, scale=\"jp_city_dc\", quality='coarse')\n",
+    "city_dc_map = load_map(date=2022, scale=\"jp_city_dc\", quality=\"coarse\")\n",
     "# Save it to disk\n",
-    "city_dc_map.to_file('citydc2022coarse.GeoJSON')  "
+    "city_dc_map.to_file(\"citydc2022coarse.GeoJSON\")"
    ]
   },
   {
@@ -979,7 +857,8 @@
    ],
    "source": [
     "import geopandas as gpd\n",
-    "new_map = gpd.read_file('./mapshaper_map2.json')\n",
+    "\n",
+    "new_map = gpd.read_file(\"./mapshaper_map2.json\")\n",
     "new_map.head()"
    ]
   },
@@ -1040,7 +919,7 @@
     }
    ],
    "source": [
-    "jd_map = load_map(2020,'jp','stylized') #compare to a stylized map made by japandata\n",
+    "jd_map = load_map(2020, \"jp\", \"stylized\")  # compare to a stylized map made by japandata\n",
     "jd_map.head()"
    ]
   },
@@ -1064,11 +943,11 @@
     "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(15, 10))\n",
     "\n",
     "jd_map.plot(ax=axes[0], edgecolor=\"w\", lw=0.5)\n",
-    "axes[0].set_title('JapanData Stylized')\n",
+    "axes[0].set_title(\"JapanData Stylized\")\n",
     "axes[0].set_axis_off()\n",
     "\n",
     "new_map.plot(ax=axes[1], edgecolor=\"w\", lw=0.5)\n",
-    "axes[1].set_title('Mapshapper')\n",
+    "axes[1].set_title(\"Mapshapper\")\n",
     "axes[1].set_axis_off()"
    ]
   },
@@ -1078,7 +957,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.close('all')"
+    "plt.close(\"all\")"
    ]
   }
  ],
