finished pop update

--- a/notebooks/readings.ipynb
+++ b/notebooks/readings.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de2671ca-7827-4111-85f6-f8812fa4ccf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !source ../venv/bin/activate && python3 -m pip install -r ../requirements/requirements-viz.txt\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import folium\n",
+    "from branca.colormap import linear\n",
+    "from folium.features import GeoJsonTooltip\n",
+    "PLOT_FOLDER = \"./readings/\"\n",
+    "os.makedirs(PLOT_FOLDER, exist_ok=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0e625359-ad7b-4024-88c2-55ad905f01c3",
    "metadata": {},
@@ -977,20 +994,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "d1f50392-7329-4753-a776-1ea50f835bcb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "PLOT_FOLDER = \"./readings/\"\n",
-    "os.makedirs(PLOT_FOLDER, exist_ok=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "id": "c9db2231-53bc-4860-b5ba-f327adb2b150",
    "metadata": {},
@@ -1209,10 +1212,6 @@
     }
    ],
    "source": [
-    "import folium\n",
-    "from branca.colormap import linear\n",
-    "from folium.features import GeoJsonTooltip\n",
-    "\n",
     "m = folium.Map(**map_style | {\"location\": [35.67, 139]})\n",
     "\n",
     "tooltip = GeoJsonTooltip(\n",
