--- a/notebooks/readings.ipynb
+++ b/notebooks/readings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "de2671ca-7827-4111-85f6-f8812fa4ccf8",
    "metadata": {},
    "outputs": [],
@@ -37,17 +37,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d93e9e38-67a2-470f-b8e2-fd35585b898c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[03/17/23 17:07:07] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Fetching data for japandata.readings                                    <a href=\"file:///Users/sam/Projects/civic/japandata/japandata/readings/readings.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">readings.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///Users/sam/Projects/civic/japandata/japandata/readings/readings.py#31\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">31</span></a>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[03/17/23 17:07:07]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Fetching data for japandata.readings                                    \u001b]8;id=404062;file:///Users/sam/Projects/civic/japandata/japandata/readings/readings.py\u001b\\\u001b[2mreadings.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=828647;file:///Users/sam/Projects/civic/japandata/japandata/readings/readings.py#31\u001b\\\u001b[2m31\u001b[0m\u001b]8;;\u001b\\\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "R2_loss.xlsx: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 98.3k/98.3k [00:00<00:00, 132kB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from japandata.readings import city_names, pref_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a253011c-91d1-45c6-9129-b4390d55ec57",
    "metadata": {},
    "outputs": [
@@ -152,7 +173,7 @@
        "4     muroran  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "849eb846-d64d-40c0-b3dd-cd501af57c4e",
    "metadata": {},
    "outputs": [
@@ -243,7 +264,7 @@
        "4        秋田県           ｱｷﾀｹﾝ   05             akita"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,10 +283,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "197ebc1b-78cb-4b8c-ab53-5ca55362764e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[03/17/23 17:07:08] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Fetching <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">20210101</span>/jp_pref.c.topojson for japandata.maps                     <a href=\"file:///Users/sam/Projects/civic/japandata/japandata/maps/maps.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">maps.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///Users/sam/Projects/civic/japandata/japandata/maps/maps.py#41\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">41</span></a>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[03/17/23 17:07:08]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Fetching \u001b[1;36m20210101\u001b[0m/jp_pref.c.topojson for japandata.maps                     \u001b]8;id=666534;file:///Users/sam/Projects/civic/japandata/japandata/maps/maps.py\u001b\\\u001b[2mmaps.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=604027;file:///Users/sam/Projects/civic/japandata/japandata/maps/maps.py#41\u001b\\\u001b[2m41\u001b[0m\u001b]8;;\u001b\\\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "jp_pref.c.topojson: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1.43M/1.43M [00:00<00:00, 1.93MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -278,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8d9302f0-02fe-4d8d-ab5a-716b2e434997",
    "metadata": {},
    "outputs": [],
@@ -290,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fbabdb65-8507-467c-8e06-4df0261ae60e",
    "metadata": {},
    "outputs": [
@@ -383,7 +425,7 @@
        "4           ｱｷﾀｹﾝ             akita  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
